# C_Prog_Book_Codes_K_and_R

./: .clangd  CMakeLists.txt  README.md
drafts/ch04/: ch4-10-1.c  ch4-6-1.c  ch4-8-1.c  recursive-demo.c  return-demo.c
drafts/ch05/: getch_demo.c
drafts/ch06/: SeekPocketPureList.c  demo01.c  demo02.c
scripts/: lcompile.ps1  lcompile.sh  llaunch.ps1  llaunch.sh  lrun.ps1  lrun.sh
src/ch01/: ch1-1-2.c  ch1-10-1.c  ch1-2-1.c  ch1-2-2.c  ch1-3-1.c  ch1-4-1.c  ch1-5-1-1.c  ch1-5-1-2.c  ch1-5-2-1.c  ch1-5-2-2.c  ch1-5-3-1.c  ch1-5-4-1.c  ch1-6-1.c  ch1-7-1.c  ch1-9-1.c  prob-1-10.c  prob-1-12.c  prob-1-13-2.c  prob-1-13.c  prob-1-14.c  prob-1-15.c  prob-1-16.c  prob-1-17.c  prob-1-18.c  prob-1-19.c  prob-1-20.c  prob-1-21.c  prob-1-22.c  prob-1-23.c  prob-1-24.c  prob-1-3.c  prob-1-4.c  prob-1-5.c  prob-1-6.c  prob-1-7.c  prob-1-8.c  prob-1-9.c
src/ch02/: ch2-10-1.c  ch2-11-1.c  ch2-2-1.c  ch2-3-1.c  ch2-3-2.c  ch2-3-3.c  ch2-7-1.c  ch2-8-1.c  ch2-8-2.c  prob-2-1-1.c  prob-2-1-2.c  prob-2-10.c  prob-2-2.c  prob-2-3.c  prob-2-4.c  prob-2-5.c  prob-2-6.c  prob-2-7.c  prob-2-8-v1.c  prob-2-8-v2.c  prob-2-8.c  prob-2-9.c
src/ch03/: ch3-3-1.c  ch3-4-1.c  ch3-5-1.c  ch3-5-2.c  ch3-5-3.c  ch3-6-1.c  ch3-7-1.c  prob-3-1.c  prob-3-2-2-v1.c  prob-3-2-2-v2.c  prob-3-2-2.c  prob-3-2.c  prob-3-3.c  prob-3-4.c  prob-3-5.c  prob-3-6.c
src/ch04/: ch4-10-1.c  ch4-10-2.c  ch4-11-1-1.c  ch4-11-1-1.h  ch4-11-1-2.c  ch4-11-2-1.c  ch4-11-2-2.c  ch4-11-2-3.c  ch4-11-2-4.c  ch4-11-3-1.c  ch4-9-1.c
src/ch05/: p102_1.c  p103_1.c  p105_1.c  p106_1.c  p96_1.c  p98_1.c  p99_2.c
src/notes/: ch3-5-2.md  prob-2-9.md
